  * factor out date/time presentation code used for error messages

  * test more error cases

  * for CRLF test, use a smaller tzfile that tickles the same potential
    bug

  * give test tzfiles appropriately capitalised names

  * convert .cvsignore to .gitignore

version 0.006; 2011-09-27

  * include the time and zone name in error messages about non-existent
    local time and unrepresented time

  * check argument types in constructor

  * make test suite work even if DateTime is not available

version 0.005; 2011-04-05

  * bugfix: read tzfiles in binary mode

  * include META.json in distribution

  * add MYMETA.json to .cvsignore

version 0.004; 2010-08-31

  * for the Olson "Factory" timezone, which has a pseudo-abbreviation
    containing spaces, don't process the TZ value that it contains,
    because it's invalid and DateTime::TimeZone::SystemV objects to it

  * tighten the criteria for recognising the special observance that
    indicates that local time is not defined (abbreviation "zzz" was
    previously the sole criterion, now also require zero offset and
    not DST)

  * allow the ->is_olson and ->category values to be specified to the
    constructor, instead of having fixed values

  * when a local time is non-existent due to an undefined observance,
    give an error message that says so, rather than conflating it with
    local time being non-existent due to an offset change

  * add DateTime::TimeZone::Olson, Time::OlsonTZ::Data, and
    Time::OlsonTZ::Download to the "see also" list

  * test the error message that is given when a local time does not
    exist due to an offset change

version 0.003; 2010-07-30

  * in documentation, correct one use of "filename" to "filehandle"

  * in documentation, use the term "truth value" instead of the less
    precise "boolean"

  * abandon use of the "fields" module

  * check for required Perl version at runtime

  * use full stricture in test suite
