@@ -1,5 +1,3 @@
-* distinguish between zone disuse and zone having unknown behaviour
-
 * handle zone disuse in extension rule
 
 * better criterion for zone disuse error message
